# PyAstLean

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Libraries.lean  PALC.lean  PastaLean.lean  PastaLeanTest.lean  PyAstLean.lean  PyAstLeanTest.lean  README.md  TypeInfer.lean  fetch_codecontests.py  lake-manifest.json  lakefile.toml  palc.lean  py2lean.lean  pyproject.toml  regen_examples.py  requirements.txt  test_coe.lean  test_coe2.lean  test_coe3.lean  test_coe4.lean  test_coe5.lean  test_coe6.lean  test_coe_generic.lean  test_coe_iter.lean  test_coe_spec.lean  test_def_type.lean  test_def_type2.lean  test_default.lean  test_default_unit.lean  test_df.lean  test_list.lean
Libraries/: Mutator.lean  Registry.lean
Libraries/bisect/: BisectDef.lean  Mapping.lean
Libraries/collections/: CollectionsDef.lean  Mapping.lean
Libraries/functools/: FunctoolsDef.lean  Mapping.lean
Libraries/heapq/: HeapqDef.lean  Mapping.lean
Libraries/itertools/: ItertoolsDef.lean  Mapping.lean
Libraries/math/: Mapping.lean  MathDef.lean
Libraries/numpy/: Creation.lean  LinearAlgebra.lean  Mapping.lean  NumpyDef.lean  Statistics.lean
Libraries/pandas/: Cell.lean  DataFrame.lean
Libraries/passta/: Mapping.lean  PasstaDef.lean
Libraries/scipy/: Mapping.lean  ScipyDef.lean
Libraries/string/: Mapping.lean  StringDef.lean
PALC/: PastaCheck.lean  PyAPI.lean
PALC/PyAPI/: TestCommonProtocols.lean  TestDicts.lean  TestPyAny.lean  TestPyAnyProof.lean
PALC/PyGens/: Basic.lean
PALC/TypeInfer/: TestInfer.lean
PastaLean/: Attributes.lean  Codegen.lean  PyAPI.lean
PastaLean/PyAPI/: BuiltinRegistry.lean  CommonProtocols.lean  Dicts.lean  Lists.lean  Operators.lean  PyAny.lean  PyAnyLinter.lean  PyAnyProof.lean  PyValue.lean  Strings.lean  (+1 more)
PastaLeanTest/: PastaLeanCheck.lean  PyAPI.lean
PyAstLean/: Attributes.lean  Basic.lean  BinOpGen.lean  Codegen.lean  ConstantGen.lean  FuncApplGen.lean  PyAPI.lean  PyGens.lean
PyAstLeanTest/: Fiddle.lean  PyAPI.lean  PyAstLeanCheck.lean  PyLeanCheck.lean  V2.lean
TypeInfer/: Annotation.lean  Emit.lean  Lattice.lean  PyType.lean  README.md  Rules.lean  Solve.lean  Value.lean
cp_harness/: .gitignore  README.md  _function.py  convert.py  cpasta_eval.py  evaluate.py  excluded_problems.txt  fetch.py  leetcode_fix_plan.md  plot.py  run_all.sh
docs/: contract-loop-proving.md  design-choices.md  syntax-gaps.md  verifiable-python-design.md
src/: __init__.py  __main__.py  annotate_python.py  cli.py  contract_passta.py  main.py  node_visitor.py  paths.py  prepasses.py  py2lean.py  pyexec.py  server.py  test.py  test_normalize_loops.py
tests/: scratch_leetcode.py  test_desugar_passes.py  test_normalize_loops.py
(+295 files in other folders)
