[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pastalean"
version = "0.1.0"
description = "Library to convert Python to Lean"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "datasets>=4.8.5",
    "libcst>=1.8.6",
    "lxml>=6.1.0",
    "numpy>=2.4.5",
    "online-judge-tools>=11.5.1",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "pyrefly>=0.64.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "setuptools>=82.0.1",
]

[project.optional-dependencies]
# `pastalean serve` only. Kept out of the core install so the CLI stays dependency-light.
server = [
    "fastapi>=0.115",
    "pydantic>=2.0",
    "uvicorn>=0.30",
]

[project.scripts]
pastalean = "pastalean.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["pastalean*"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pyrefly>=0.64.1",
]
